--- a/weatherAppStyle.css
+++ b/weatherAppStyle.css
@@ -22,7 +22,7 @@ body {
     margin-right: 20px;
 }
 
-.topnav input[type=text] {
+.topnav {
     float: right;
     padding: 6px;
     border: none;
@@ -65,7 +65,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: white;
-    
 }
 
 .pastCities > div {
